Improve smart card assignment with complexity-based algorithm
Refactor to use functional programming without mutation:
- Complexity = (1 - normalizedRating) * daysSinceReview
- Preference = userComplexity - partnerComplexity
- Sort by preference, split into user/partner halves
- Reverse partner cards so hardest are first
- Interleave: user at even positions, partner at odd

The algorithm ensures:
- Equal distribution (primary rule)
- Hardest cards for each person appear first in their queue
- Clean functional implementation with no mutation